# Pong

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.h  Game.h  Paddle.h  Scoreboard.h
src/: Ball.cpp  Game.cpp  Paddle.cpp  Scoreboard.cpp  main.cpp
